tests/errors/syntax_errors/DECORATOR_WRONG_NUMBER_TYPES.py
# pylint: disable=missing-function-docstring, missing-module-docstring
from pyccel.decorators import types

@types('int', 'int')
def func(n):
    return n
